/**
 * @file BasicGlobalPathRoutePlannerProcess.hpp
 * @author David Gitz (davidgitz@gmail.com)
 * @brief
 * @version 0.1
 * @date 2026-06-27
 *
 * @copyright Copyright (c) 2026
 *
 */
#pragma once

#include <BaseGlobalPathRoutePlannerProcess.hpp>

namespace fast::rf::NavigationSystem::GlobalPlannerSubsystem::GlobalPathRoutePlanner {
    /**
     * @brief Minimal Implementation for a GlobalPathRoutePlanner Process
     *
     */
    class BasicGlobalPathRoutePlannerProcess : public BaseGlobalPathRoutePlannerProcess {
       public:
        BasicGlobalPathRoutePlannerProcess() : BaseGlobalPathRoutePlannerProcess() {}

        /**
         * @brief Initialize the Object
         *
         * @return true
         * @return false
         */
        bool init() override;

        /**
         * @brief Update with recent timing data
         *
         * @param current_time_sec
         * @return true If update executed ok
         * @return false If update executed with some error
         */
        bool update(double current_time_sec) override;

       private:
    };
}  // namespace fast::rf::NavigationSystem::GlobalPlannerSubsystem::GlobalPathRoutePlanner