' @compare_tag Process-ClassDiagram v0.1
@startuml
title GlobalPathRoutePlanner Process Class Diagram

namespace fast::rf {
  namespace DiagnosticDefinition {
    enum DiagnosticType
  }
  namespace messages {
    namespace InfrastructureMsgs {
      class DiagnosticMsg <<(M,#FFFF00)>>
    }
  }
  namespace core::Infrastructure {
    class DiagnosticManager
  }
  namespace NavigationSystem {
    namespace GlobalPlannerSubsystem {
      package GlobalPathRoutePlanner #LightYellow;line:blue {
        interface IGlobalPathRoutePlannerProcess  {
          +{abstract} bool init()
          +{abstract} DiagnosticMsg[] getDiagnostics()
          +{abstract} bool update(double current_time_sec)
        }
        abstract BaseGlobalPathRoutePlannerProcess {
          +DiagnosticMsg[] getDiagnostics()
          +bool base_update(double current_time_sec)
          #DiagnosticManager diagnosticManager

        }
        BaseGlobalPathRoutePlannerProcess .up.|> IGlobalPathRoutePlannerProcess
        class BasicGlobalPathRoutePlannerProcess {
          +bool init()
          +bool update(double current_time_sec)
        }
        BasicGlobalPathRoutePlannerProcess -up-|> BaseGlobalPathRoutePlannerProcess
        class DummyGlobalPathRoutePlannerProcess {
          +bool update(double current_time_sec)
        }
        DummyGlobalPathRoutePlannerProcess -up-|> BaseGlobalPathRoutePlannerProcess
      }
    }
  }
}
@enduml